before major css refactor

--- a/pages/about.html
+++ b/pages/about.html
@@ -1,27 +1,31 @@
 <h1>About</h1>
-<section class="slider">
-    <div class="slides">
-        <div class="slide">
-            <img src="../assets/owl.jpg" alt="Owl Image">
-            <div class="caption">HUMAN AND BIOLOGICAL PERCEPTION</div>
-        </div>
-        <!-- Additional slides can be added here -->
-    </div>
-</section>
 <section class="content">
     <div class="description">
         <h2>The Interdisciplinary Computational Vision Lab</h2>
-        <p>The Interdisciplinary Computational Vision Lab was founded in 2006 as one of the core labs in the Computer Science department at Ben-Gurion University. Loyal to its name, the lab is an interdisciplinary facility where research focuses on computational vision but at the same time spans various aspects of vision sciences, including theoretical computer vision, human perception and visual psychophysics, visual neuroscience, and applied machine vision. Our goal is to contribute to the understanding of biological (and in particular, human) vision and at the same time explore its theoretical foundations and practical applications to machine vision.</p>
-        <p>We are always looking for excellent graduate students to join the lab. If any of the vision sciences catches your imagination and research is your passion, please do contact us to tell us about yourself and learn more about the lab and its research.</p>
-    </div>
-    <div class="news">
-        <h3>Latest News:</h3>
-        <ul>
-            <li>Gradient Surfing - A new project accepted for oral presentation at ICV 2018</li>
-            <li>A new project accepted for oral presentation at ICON 2018</li>
-            <li>New paper accepted for publication in the CVPR 2018</li>
-            <li>New paper accepted for publication in the Journal of ...</li>
-        </ul>
-        <button>Load More (5/21)</button>
+        <div class="about-section">
+            <div class="about-text">
+                <p>The Interdisciplinary Computational Vision Lab was founded in 2006 as one of the core labs in the Computer Science department at Ben-Gurion University. Loyal to its name, the lab is an interdisciplinary facility where research focuses on computational vision but at the same time spans various aspects of vision sciences, including theoretical computer vision, human perception and visual psychophysics, visual neuroscience, and applied machine vision. Our goal is to contribute to the understanding of biological (and in particular, human) vision and at the same time explore its theoretical foundations and practical applications to machine vision.</p>
+                <p>We are always looking for excellent graduate students to join the lab. If any of the vision sciences catches your imagination and research is your passion, please do contact us to tell us about yourself and learn more about the lab and its research.</p>
+            </div>
+            <div class="about-image">
+                <img src="../assets/about/about-pic.jpg" alt="About ICVL">
+            </div>
+        </div>
+
+        <h2>Mission</h2>
+        <p><strong>The interdisciplinary Computational Vision Lab</strong> was founded in 2006 by <a href="http://www.cs.bgu.ac.il/~ben-shahar/">Prof. Ohad Ben-Shahar</a> as one of the core labs in the <a href="http://www.cs.bgu.ac.il/">Computer Science department</a> at <a href="http://www.bgu.ac.il/">Ben-Gurion University</a>. Its mission is twofold: to advance the state of knowledge about biological (and in particular, human) vision while at the same time to contribute to various aspects of machine vision, both theoretical and applied. To meet these goals, research in the <strong>iCVL</strong> is highly interdisciplinary, involving computational work with techniques from visual psychophysics and inquiry into visual neuroscience.</p>
+
+        <h2>Join Us</h2>
+        <p>We always look for excellent graduate students and postdocs to join the lab. If any of the vision sciences catches your imagination and research is your passion, please do <a href="mailto:iCVL@cs.bgu.ac.il">contact us</a> to tell us about yourself and learn more about the lab and its research.</p>
+
+        <h2>Directions</h2>
+        <h3>Via train:</h3>
+        <p>A very comfortable way to get to the BGU campus is via train, since there is a train station virtually on campus (a three-minute stroll from the lab), and a train arriving/leaving town once an hour. (For schedule see the <a href="http://www.rail.co.il/">Israeli Railways web site</a>.) If you do arrive by train, please get off at <a href="http://www.cs.bgu.ac.il/img/TrainStation.jpg">Be’er Sheva North/University</a> station (NOT Be’er Sheva Merkaz) and simply walk over the bridge to the university. At the gate you will see the distinctive <a href="http://www.cs.bgu.ac.il/img/Alon.jpg">Alon Building for Hi-Tech (Building #37)</a> directly ahead of you.</p>
+
+        <h3>Via car:</h3>
+        <p>If you plan on arriving by car and do not have access to the BGU campus, please make sure to contact us ahead of time so we can process your gate permit. Coming from north, please take route 40 until Goral interchange and continue straight ahead on route 406 into Beer Sheva. Turning left at light #5 (all lights in Beer Sheva are numbered) leads you to the main campus gate and once you enter it turn right and park in the big parking lot. The stairs next to the senate building will lead you to the upper level, from which a short stroll along the inner road of the campus will land you in the distinctive <a href="http://www.cs.bgu.ac.il/img/Alon.jpg">Alon Building for Hi-Tech (Building #37)</a>.</p>
+
+        <h3>Maps:</h3>
+        <p>Campus map and additional directions can be found on the <a href="http://www.cs.bgu.ac.il/information/directions.html">department web site</a> or the <a href="http://in.bgu.ac.il/en/Pages/maps.aspx">BGU web site</a>.</p>
     </div>
 </section>
