--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <header>
-        <div class="logo">
-            <img src="assets/logo_icvl.png" alt="ICVL Logo">
+         <div class="logo">
+            <a href="#" onclick="loadContent('pages/home.html')">
+                <img src="assets/logo_icvl.png" alt="ICVL Logo">
+            </a>
         </div>
         <nav>
             <ul>
