--- a/pages/home.html
+++ b/pages/home.html
@@ -1,11 +1,21 @@
-<h1>About</h1>
 <section class="slider">
     <div class="slides">
-        <div class="slide">
-            <img src="../assets/owl.jpg" alt="Owl Image">
+        <div class="slide active-slide">
+            <img src="../assets/home/owl-2.jpg" alt="Owl Image">
             <div class="caption">HUMAN AND BIOLOGICAL PERCEPTION</div>
         </div>
-        <!-- Additional slides can be added here -->
+        <div class="slide">
+            <img src="../assets/home/ball1.jpg" alt="Ball Image">
+            <div class="caption">COMPUTATIONAL AND MACHINE VISION</div>
+        </div>
+        <div class="slide">
+            <img src="../assets/home/tngtbndl.png" alt="Graph Image">
+            <div class="caption">COMPUTATIONAL VISUAL NEUROSCIENCE</div>
+        </div>
+    </div>
+    <div class="slider-nav">
+        <span class="prev" onclick="plusSlides(-1)">&#10094;</span>
+        <span class="next" onclick="plusSlides(1)">&#10095;</span>
     </div>
 </section>
 <section class="content">
@@ -14,5 +24,4 @@
         <p>The Interdisciplinary Computational Vision Lab was founded in 2006 as one of the core labs in the Computer Science department at Ben-Gurion University. Loyal to its name, the lab is an interdisciplinary facility where research focuses on computational vision but at the same time spans various aspects of vision sciences, including theoretical computer vision, human perception and visual psychophysics, visual neuroscience, and applied machine vision. Our goal is to contribute to the understanding of biological (and in particular, human) vision and at the same time explore its theoretical foundations and practical applications to machine vision.</p>
         <p>We are always looking for excellent graduate students to join the lab. If any of the vision sciences catches your imagination and research is your passion, please do contact us to tell us about yourself and learn more about the lab and its research.</p>
     </div>
-
 </section>
