--- a/pages/home.html
+++ b/pages/home.html
@@ -1,7 +1,7 @@
 <section class="slider">
     <div class="slides">
         <div class="slide active-slide">
-            <img src="./../assets/home/owl-2.jpg" alt="Owl Image">
+            <img src="../assets/home/owl-2.jpg" alt="Owl Image">
             <div class="caption">HUMAN AND BIOLOGICAL PERCEPTION</div>
         </div>
         <div class="slide">
