fix path - test

--- a/pages/home.html
+++ b/pages/home.html
@@ -5,7 +5,7 @@
             <div class="caption">HUMAN AND BIOLOGICAL PERCEPTION</div>
         </div>
         <div class="slide">
-            <img src="../assets/home/ball1.jpg" alt="Ball Image">
+            <img src="/assets/home/ball1.jpg" alt="Ball Image">
             <div class="caption">COMPUTATIONAL AND MACHINE VISION</div>
         </div>
         <div class="slide">
