fix path, no need with '..' before path

--- a/pages/members.html
+++ b/pages/members.html
@@ -8,7 +8,7 @@
                                 <div class="student_box">
                                     <div class="student_box_img">
                                         <a href="http://www.cs.bgu.ac.il/~ben-shahar/" target="_blank">
-                                            <img src="../assets/members/ohad_circle-150x150.jpg" alt="Ohad Ben-Shahar member image">
+                                            <img src="/assets/members/ohad_circle-150x150.jpg" alt="Ohad Ben-Shahar member image">
                                         </a>
                                     </div>
                                     <a href="http://www.cs.bgu.ac.il/~ben-shahar/" target="_blank" class="member-name">Ohad Ben-Shahar</a>
@@ -17,7 +17,7 @@
                                 <div class="student_box">
                                     <div class="student_box_img">
                                         <a href="https://www.cs.bgu.ac.il/~rotemra/" target="_blank">
-                                            <img src="../assets/members/students-pic-ben-mairon.jpg" alt="Rotem Mairon member image">
+                                            <img src="/assets/members/students-pic-ben-mairon.jpg" alt="Rotem Mairon member image">
                                         </a>
                                     </div>
                                     <a href="https://www.cs.bgu.ac.il/~rotemra/" target="_blank" class="member-name">Rotem Mairon</a>
@@ -25,21 +25,21 @@
                                 </div>
                                 <div class="student_box">
                                     <div class="student_box_img">
-                                        <img src="../assets/members/lab_profile-150x150.jpg" alt="Peleg Harel member image">
+                                        <img src="/assets/members/lab_profile-150x150.jpg" alt="Peleg Harel member image">
                                     </div>
                                     <a href="#" class="member-name">Peleg Harel</a>
                                     <p>M.Sc. Student</p>
                                 </div>
                                 <div class="student_box">
                                     <div class="student_box_img">
-                                        <img src="../assets/members/IMG-20181202-WA00081-150x150.jpg" alt="Keren Berger member image">
+                                        <img src="/assets/members/IMG-20181202-WA00081-150x150.jpg" alt="Keren Berger member image">
                                     </div>
                                     <a href="#" class="member-name">Keren Berger</a>
                                     <p>Ph.D. Student</p>
                                 </div>
                                 <div class="student_box">
                                     <div class="student_box_img">
-                                        <img src="../assets/members/ben-e1551164852316-150x150.jpg" alt="Ben Vardi member image">
+                                        <img src="/assets/members/ben-e1551164852316-150x150.jpg" alt="Ben Vardi member image">
                                     </div>
                                     <a href="#" class="member-name">Ben Vardi</a>
                                     <p>M.Sc. Student</p>
@@ -47,7 +47,7 @@
                                 <div class="student_box">
                                     <div class="student_box_img">
                                         <a href="https://www.roytoren.com/about" target="_blank">
-                                            <img src="../assets/members/20180904_1425471-e1577004790577-150x150.jpg" alt="Roy Toren member image">
+                                            <img src="/assets/members/20180904_1425471-e1577004790577-150x150.jpg" alt="Roy Toren member image">
                                         </a>
                                     </div>
                                     <a href="https://www.roytoren.com/about" target="_blank" class="member-name">Roy Toren</a>
@@ -55,42 +55,42 @@
                                 </div>
                                 <div class="student_box">
                                     <div class="student_box_img">
-                                        <img src="../assets/members/ilangit-150x150.jpg" alt="Ilan Git member image">
+                                        <img src="/assets/members/ilangit-150x150.jpg" alt="Ilan Git member image">
                                     </div>
                                     <a href="#" class="member-name">Ilan Git</a>
                                     <p>M.Sc. Student</p>
                                 </div>
                                 <div class="student_box">
                                     <div class="student_box_img">
-                                        <img src="../assets/members/students-pic-amar.jpg" alt="Elad Amar member image">
+                                        <img src="/assets/members/students-pic-amar.jpg" alt="Elad Amar member image">
                                     </div>
                                     <a href="#" class="member-name">Elad Amar</a>
                                     <p>M.Sc. Student</p>
                                 </div>
                                 <div class="student_box">
                                     <div class="student_box_img">
-                                        <img src="../assets/members/WhatsApp-Image-2022-01-11-at-12.53.57-150x150.jpeg" alt="Yaniv Ohayon member image">
+                                        <img src="/assets/members/WhatsApp-Image-2022-01-11-at-12.53.57-150x150.jpeg" alt="Yaniv Ohayon member image">
                                     </div>
                                     <a href="#" class="member-name">Yaniv Ohayon</a>
                                     <p>M.Sc. Student</p>
                                 </div>
                                 <div class="student_box">
                                     <div class="student_box_img">
-                                        <img src="../assets/members/profile-150x150.jpeg" alt="Michael Lellouch member image">
+                                        <img src="/assets/members/profile-150x150.jpeg" alt="Michael Lellouch member image">
                                     </div>
                                     <a href="#" class="member-name">Michael Lellouch</a>
                                     <p>M.Sc. Student</p>
                                 </div>
                                 <div class="student_box">
                                     <div class="student_box_img">
-                                        <img src="../assets/members/Gur_Protrait-150x150.png" alt="Gur Shalev Elkin member image">
+                                        <img src="/assets/members/Gur_Protrait-150x150.png" alt="Gur Shalev Elkin member image">
                                     </div>
                                     <a href="#" class="member-name">Gur Shalev Elkin</a>
                                     <p>Eitan program Student</p>
                                 </div>
                                 <div class="student_box">
                                     <div class="student_box_img">
-                                        <img src="../assets/members/IMG_1732-150x150.jpg" alt="Ofir Shahar member image">
+                                        <img src="/assets/members/IMG_1732-150x150.jpg" alt="Ofir Shahar member image">
                                     </div>
                                     <a href="#" class="member-name">Ofir Shahar</a>
                                     <p>Eitan program Student</p>
@@ -101,7 +101,7 @@
                                 <div class="student_box_alumni">
                                     <div class="student_box_img">
                                         <a href="http://www.boazarad.com/" target="_blank">
-                                            <img src="../assets/members/students-pic-arad.jpg" alt="Boaz Arad member image">
+                                            <img src="/assets/members/students-pic-arad.jpg" alt="Boaz Arad member image">
                                         </a>
                                     </div>
                                     <a href="http://www.boazarad.com/" target="_blank" class="member-name">Boaz Arad</a>
@@ -112,7 +112,7 @@
                                 <div class="student_box_alumni">
                                     <div class="student_box_img">
                                         <a href="http://www.cs.bgu.ac.il/~dubie" target="_blank">
-                                            <img src="../assets/members/efrat.jpg" alt="Efrat Taig (Dubi) member image">
+                                            <img src="/assets/members/efrat.jpg" alt="Efrat Taig (Dubi) member image">
                                         </a>
                                     </div>
                                     <a href="http://www.cs.bgu.ac.il/~dubie" target="_blank" class="member-name">Efrat Taig (Dubi)</a>
@@ -122,7 +122,7 @@
                                 <div class="student_box_alumni">
                                     <div class="student_box_img">
                                         <a href="http://www.cs.bgu.ac.il/~barneaeh" target="_blank">
-                                            <img src="../assets/members/students-pic-barnea.jpg" alt="Ehud Barnea member image">
+                                            <img src="/assets/members/students-pic-barnea.jpg" alt="Ehud Barnea member image">
                                         </a>
                                     </div>
                                     <a href="http://www.cs.bgu.ac.il/~barneaeh" target="_blank" class="member-name">Ehud Barnea</a>
@@ -132,7 +132,7 @@
                                 </div>
                                 <div class="student_box_alumni">
                                     <div class="student_box_img">
-                                        <img src="../assets/members/shir2-150x150.jpg" alt="Shir Gur member image">
+                                        <img src="/assets/members/shir2-150x150.jpg" alt="Shir Gur member image">
                                     </div>
                                     <a href="#" class="member-name">Shir Gur</a>
                                     <p>M.Sc. (2018)</p>
@@ -141,7 +141,7 @@
                                 </div>
                                 <div class="student_box_alumni">
                                     <div class="student_box_img">
-                                        <img src="../assets/members/students-pic-nir2.jpg" alt="Gal Nir member image">
+                                        <img src="/assets/members/students-pic-nir2.jpg" alt="Gal Nir member image">
                                     </div>
                                     <a href="#" class="member-name">Gal Nir</a>
                                     <p>M.Sc. (2016)</p>
@@ -151,7 +151,7 @@
                                 <div class="student_box_alumni">
                                     <div class="student_box_img">
                                         <a href="http://www.cs.bgu.ac.il/~ilankad/" target="_blank">
-                                            <img src="../assets/members/students-pic-kadar.jpg" alt="Ilan Kadar member image">
+                                            <img src="/assets/members/students-pic-kadar.jpg" alt="Ilan Kadar member image">
                                         </a>
                                     </div>
                                     <a href="http://www.cs.bgu.ac.il/~ilankad/" target="_blank" class="member-name">Ilan Kadar</a>
@@ -162,7 +162,7 @@
                                 <div class="student_box_alumni">
                                     <div class="student_box_img">
                                         <a href="http://www.cs.bgu.ac.il/faculty/person/mokeiche.html" target="_blank">
-                                            <img src="../assets/members/students-pic-mokeichev.jpg" alt="Alik Mokeichev member image">
+                                            <img src="/assets/members/students-pic-mokeichev.jpg" alt="Alik Mokeichev member image">
                                         </a>
                                     </div>
                                     <a href="http://www.cs.bgu.ac.il/faculty/person/mokeiche.html" target="_blank" class="member-name">Alik Mokeichev</a>
@@ -173,7 +173,7 @@
                                 <div class="student_box_alumni">
                                     <div class="student_box_img">
                                         <a href="http://www.cs.bgu.ac.il/~adato/" target="_blank">
-                                            <img src="../assets/members/students-pic-adato.jpg" alt="Yair Adato member image">
+                                            <img src="/assets/members/students-pic-adato.jpg" alt="Yair Adato member image">
                                         </a>
                                     </div>
                                     <a href="http://www.cs.bgu.ac.il/~adato/" target="_blank" class="member-name">Yair Adato</a>
@@ -184,7 +184,7 @@
                                 <div class="student_box_alumni">
                                     <div class="student_box_img">
                                         <a href="http://www.cs.bgu.ac.il/~shemeshm/" target="_blank">
-                                            <img src="../assets/members/students-pic-shemesh.jpg" alt="Michal Shemesh member image">
+                                            <img src="/assets/members/students-pic-shemesh.jpg" alt="Michal Shemesh member image">
                                         </a>
                                     </div>
                                     <a href="http://www.cs.bgu.ac.il/~shemeshm/" target="_blank" class="member-name">Michal Shemesh</a>
@@ -195,7 +195,7 @@
                                 <div class="student_box_alumni">
                                     <div class="student_box_img">
                                         <a href="http://www.cs.bgu.ac.il/faculty/person/dolevp.html" target="_blank">
-                                            <img src="../assets/members/students-pic-pomeranz.jpg" alt="Dolev Pomeranz member image">
+                                            <img src="/assets/members/students-pic-pomeranz.jpg" alt="Dolev Pomeranz member image">
                                         </a>
                                     </div>
                                     <a href="http://www.cs.bgu.ac.il/faculty/person/dolevp.html" target="_blank" class="member-name">Dolev Pomeranz</a>
@@ -206,7 +206,7 @@
                                 <div class="student_box_alumni">
                                     <div class="student_box_img">
                                         <a href="http://www.math.tau.ac.il/research/rami.ben-ari/" target="_blank">
-                                            <img src="../assets/members/students-pic-ben-yosef.jpg" alt="Guy Ben-Yosef member image">
+                                            <img src="/assets/members/students-pic-ben-yosef.jpg" alt="Guy Ben-Yosef member image">
                                         </a>
                                     </div>
                                     <a href="http://www.math.tau.ac.il/research/rami.ben-ari/" target="_blank" class="member-name">Guy Ben-Yosef</a>
@@ -217,7 +217,7 @@
                                 <div class="student_box_alumni">
                                     <div class="student_box_img">
                                         <a href="http://www.math.tau.ac.il/research/rami.ben-ari/" target="_blank">
-                                            <img src="../assets/members/students-pic-ben-ari.jpg" alt="Rami Ben Ari member image">
+                                            <img src="/assets/members/students-pic-ben-ari.jpg" alt="Rami Ben Ari member image">
                                         </a>
                                     </div>
                                     <a href="http://www.math.tau.ac.il/research/rami.ben-ari/" target="_blank" class="member-name">Rami Ben Ari</a>
@@ -227,7 +227,7 @@
                                 </div>
                                 <div class="student_box_alumni">
                                     <div class="student_box_img">
-                                        <img src="../assets/members/students-pic-diesendruck.jpg" alt="Liana Diesendruck member image">
+                                        <img src="/assets/members/students-pic-diesendruck.jpg" alt="Liana Diesendruck member image">
                                     </div>
                                     <a href="#" class="member-name">Liana Diesendruck</a>
                                     <p>M.Sc. (2010)</p>
@@ -237,7 +237,7 @@
                                 <div class="student_box_alumni">
                                     <div class="student_box_img">
                                         <a href="http://www.cs.bgu.ac.il/faculty/person/katzhad.html" target="_blank">
-                                            <img src="../assets/members/students-pic-daltrophe.jpg" alt="Hadassa Daltrophe member image">
+                                            <img src="/assets/members/students-pic-daltrophe.jpg" alt="Hadassa Daltrophe member image">
                                         </a>
                                     </div>
                                     <a href="http://www.cs.bgu.ac.il/faculty/person/katzhad.html" target="_blank" class="member-name">Hadassa Daltrophe</a>
@@ -247,7 +247,7 @@
                                 </div>
                                 <div class="student_box_alumni">
                                     <div class="student_box_img">
-                                        <img src="../assets/members/students-pic-mishkin.jpg" alt="Maor Mishkin member image">
+                                        <img src="/assets/members/students-pic-mishkin.jpg" alt="Maor Mishkin member image">
                                     </div>
                                     <a href="#" class="member-name">Maor Mishkin</a>
                                     <p>M.Sc. (2008)</p>
@@ -256,7 +256,7 @@
                                 </div>
                                 <div class="student_box_alumni">
                                     <div class="student_box_img">
-                                        <img src="../assets/members/students-pic-hirsh.jpg" alt="Moran Hirsh member image">
+                                        <img src="/assets/members/students-pic-hirsh.jpg" alt="Moran Hirsh member image">
                                     </div>
                                     <a href="#" class="member-name">Moran Hirsh</a>
                                     <p>M.Sc. (2007)</p>
