--- a/pages/home.html
+++ b/pages/home.html
@@ -1,7 +1,7 @@
 <section class="slider">
     <div class="slides">
         <div class="slide active-slide">
-            <img src="{{ site.baseurl }}/assets/home/owl-2.jpg" alt="Owl Image">
+            <img src="/assets/home/owl-2.jpg" alt="Owl Image">
             <div class="caption">HUMAN AND BIOLOGICAL PERCEPTION</div>
         </div>
         <div class="slide">
@@ -9,7 +9,7 @@
             <div class="caption">COMPUTATIONAL AND MACHINE VISION</div>
         </div>
         <div class="slide">
-            <img src="../assets/home/tngtbndl.png" alt="Graph Image">
+            <img src="/assets/home/tngtbndl.png" alt="Graph Image">
             <div class="caption">COMPUTATIONAL VISUAL NEUROSCIENCE</div>
         </div>
     </div>
