--- a/pages/research.html
+++ b/pages/research.html
@@ -4,43 +4,43 @@
 <div class="research-grid">
     <div class="research-item">
         <a href="https://icvl.cs.bgu.ac.il/multi-phase-rl-for-jigsaw-puzzle-solving/">
-            <img src="/assets/research/gifs/projects-index-jigsaw-anim.gif" alt="Multi-Phase Relaxation Labeling for Square Jigsaw Puzzle Solving">
+            <img src="../assets/research/gifs/projects-index-jigsaw-anim.gif" alt="Multi-Phase Relaxation Labeling for Square Jigsaw Puzzle Solving">
             <p>Multi-Phase Relaxation Labeling for Square Jigsaw Puzzle Solving</p>
         </a>
     </div>
     <div class="research-item">
         <a href="https://icvl.cs.bgu.ac.il/polygonal-puzzle-solving/">
-            <img src="/assets/research/gifs/apictorial_polygonal_reconstruction3.gif" alt="Computational Polygonal Puzzle Solving">
+            <img src="../assets/research/gifs/apictorial_polygonal_reconstruction3.gif" alt="Computational Polygonal Puzzle Solving">
             <p>Computational Polygonal Puzzle Solving</p>
         </a>
     </div>
     <div class="research-item">
         <a href="https://icvl.cs.bgu.ac.il/automatic-jigsaw-puzzle-solving/">
-            <img src="/assets/research/gifs/projects-index-jigsaw-anim.gif" alt="Square Jigsaw Puzzle Solving">
+            <img src="../assets/research/gifs/projects-index-jigsaw-anim.gif" alt="Square Jigsaw Puzzle Solving">
             <p>Square Jigsaw Puzzle Solving</p>
         </a>
     </div>
     <div class="research-item">
         <a href="https://icvl.cs.bgu.ac.il/hyperspectral-imaging/">
-            <img src="/assets/research/gifs/hs-animation1.gif" alt="Hyperspectral Imaging from low cost sensors">
+            <img src="../assets/research/gifs/hs-animation1.gif" alt="Hyperspectral Imaging from low cost sensors">
             <p>Hyperspectral Imaging from low cost sensors</p>
         </a>
     </div>
     <div class="research-item">
         <a href="https://icvl.cs.bgu.ac.il/archerfish-vision/">
-            <img src="/assets/research/gifs/projects-index-CVwVC-anim.gif" alt="Archerfish Vision">
+            <img src="../assets/research/gifs/projects-index-CVwVC-anim.gif" alt="Archerfish Vision">
             <p>Archerfish Vision</p>
         </a>
     </div>
     <div class="research-item">
         <a href="https://icvl.cs.bgu.ac.il/visual-completion/">
-            <img src="/assets/research/gifs/projects-index-CCinTB-anim.gif" alt="Curve completion in the tangent bundle">
+            <img src="../assets/research/gifs/projects-index-CCinTB-anim.gif" alt="Curve completion in the tangent bundle">
             <p>Curve completion in the tangent bundle</p>
         </a>
     </div>
     <div class="research-item">
         <a href="https://icvl.cs.bgu.ac.il/agrovision/">
-            <img src="/assets/research/gifs/20150909_135657_online-video-cutter-1.gif" alt="Agrovision">
+            <img src="../assets/research/gifs/20150909_135657_online-video-cutter-1.gif" alt="Agrovision">
             <p>Agrovision</p>
         </a>
     </div>
@@ -50,49 +50,49 @@
 <div class="research-grid">
     <div class="research-item">
         <a href="https://icvl.cs.bgu.ac.il/the-owlcam-project/">
-            <img src="/assets/research/gifs/projects-index-OwlCam-anim.gif" alt="The OwlCam Project">
+            <img src="../assets/research/gifs/projects-index-OwlCam-anim.gif" alt="The OwlCam Project">
             <p>The OwlCam Project</p>
         </a>
     </div>
     <div class="research-item">
         <a href="https://icvl.cs.bgu.ac.il/visual-salience/">
-            <img src="/assets/research/gifs/ASD_1_27_27491_Web1.gif" alt="Contextual Emergence of Object Saliency">
+            <img src="../assets/research/gifs/ASD_1_27_27491_Web1.gif" alt="Contextual Emergence of Object Saliency">
             <p>Contextual Emergence of Object Saliency</p>
         </a>
     </div>
     <div class="research-item">
         <a href="https://icvl.cs.bgu.ac.il/3d-pose-from-symmetry/">
-            <img src="/assets/research/gifs/3d_chair-768x576.jpg" alt="Symmetry and Pose Estimation in 3D Data">
+            <img src="../assets/research/gifs/3d_chair-768x576.jpg" alt="Symmetry and Pose Estimation in 3D Data">
             <p>Symmetry and Pose Estimation in 3D Data</p>
         </a>
     </div>
     <div class="research-item">
         <a href="https://icvl.cs.bgu.ac.il/scene-gist-categorization-from-perceptual-relations/">
-            <img src="/assets/research/gifs/projects-index-gist-anim.gif" alt="Scene Gist Recognition from Perceptual Relations">
+            <img src="../assets/research/gifs/projects-index-gist-anim.gif" alt="Scene Gist Recognition from Perceptual Relations">
             <p>Scene Gist Recognition from Perceptual Relations</p>
         </a>
     </div>
     <div class="research-item">
         <a href="https://icvl.cs.bgu.ac.il/polar-optic-flow/">
-            <img src="/assets/research/gifs/projects-index-polar-anim.gif" alt="Polar Representation of Motion and Optical Flow">
+            <img src="../assets/research/gifs/projects-index-polar-anim.gif" alt="Polar Representation of Motion and Optical Flow">
             <p>Polar Representation of Motion and Optical Flow</p>
         </a>
     </div>
     <div class="research-item">
         <a href="https://icvl.cs.bgu.ac.il/shape-from-specular-flow/">
-            <img src="/assets/research/gifs/projects-index-sfsf-anim1.gif" alt="Shape from Specular Flow">
+            <img src="../assets/research/gifs/projects-index-sfsf-anim1.gif" alt="Shape from Specular Flow">
             <p>Shape from Specular Flow</p>
         </a>
     </div>
     <div class="research-item">
         <a href="https://icvl.cs.bgu.ac.il/active-contours/">
-            <img src="/assets/research/gifs/projects-index-FBCAC-anim.gif" alt="Free Boundary Conditions Active Contours">
+            <img src="../assets/research/gifs/projects-index-FBCAC-anim.gif" alt="Free Boundary Conditions Active Contours">
             <p>Free Boundary Conditions Active Contours</p>
         </a>
     </div>
     <div class="research-item">
         <a href="https://icvl.cs.bgu.ac.il/perceptual-singularities/">
-            <img src="/assets/research/gifs/projects-index-PSinOBTS-anim.gif" alt="Perceptual Singularities without Feature Gradient">
+            <img src="../assets/research/gifs/projects-index-PSinOBTS-anim.gif" alt="Perceptual Singularities without Feature Gradient">
             <p>Perceptual Singularities without Feature Gradient</p>
         </a>
     </div>
