--- a/pages/about.html
+++ b/pages/about.html
@@ -8,7 +8,7 @@
                 <p>We are always looking for excellent graduate students to join the lab. If any of the vision sciences catches your imagination and research is your passion, please do contact us to tell us about yourself and learn more about the lab and its research.</p>
             </div>
             <div class="about-image">
-                <img src="../assets/about/about-pic.jpg" alt="About ICVL">
+                <img src="./assets/about/about-pic.jpg" alt="About ICVL">
             </div>
         </div>
 
