adding seminars (initial )

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/layout.css">
     <link rel="stylesheet" href="css/components.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/seminar.css">
 </head>
 <body>
     <header>
@@ -53,6 +54,8 @@
             <p>Location: BGU Campus, Building 37, Lab -103 (one floor below ground level)</p>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
     <script src="js/scripts.js"></script>
+    <script src="js/seminar.js"></script>
 </body>
 </html>
