--- a/pages/seminar.html
+++ b/pages/seminar.html
@@ -1,2 +1,9 @@
 <h1>Meeting Presentations</h1>
+<section class="content">
+    <div class="description">
+        <h2>iCVL Meetings</h2>
+        <p>The iCVL maintains its own weekly seminar series and reading group where we either have guests to discuss their research or we have one of our own lead the study of a topic or a specific research of interest from the literature. Our meetings run as two hour round table discussions (currently on Wednesdays 10:00-12:00) and enjoy a significant level of interaction than most seminars. We will be delighted to host you to learn about your work too. Please contact the lab’s director or our seminar coordinator.</p>
+        <p>While group meetings started in 2007, organized listings for the website began in Feb 2012, shortly before its launching in July 2012. The forthcoming meeting is automatically highlighted and centered below. Please scroll up and down for future and past meetings.</p>
+    </div>
+</section>
 <div id="meetingsContainer"></div>
