--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
                 <li><a href="#" onclick="loadContent('pages/research.html')">Research</a></li>
                 <li><a href="#" onclick="loadContent('pages/publications.html')">Publications</a></li>
                 <li><a href="#" onclick="loadContent('pages/seminar.html')">Seminar</a></li>
-                <li><a href="#" onclick="loadContent('pages/lablog.html')">Lab Log</a></li>
                 <li><a href="#" onclick="loadContent('pages/gallery.html')">Gallery</a></li>
                 <li><a href="#" onclick="loadContent('pages/resources.html')">Resources</a></li>
                 <li><a href="#" onclick="loadContent('pages/gradpositions.html')">Grad Positions</a></li>
@@ -57,5 +56,6 @@
     <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
     <script src="js/scripts.js"></script>
     <script src="js/seminar.js"></script>
+    <script src="js/publications.js"></script>
 </body>
 </html>
