--- a/pages/about.html
+++ b/pages/about.html
@@ -3,13 +3,9 @@
     <div class="description">
         <h2>The Interdisciplinary Computational Vision Lab</h2>
         <div class="about-section">
-            <div class="about-text">
-                <p>The Interdisciplinary Computational Vision Lab was founded in 2006 as one of the core labs in the Computer Science department at Ben-Gurion University. Loyal to its name, the lab is an interdisciplinary facility where research focuses on computational vision but at the same time spans various aspects of vision sciences, including theoretical computer vision, human perception and visual psychophysics, visual neuroscience, and applied machine vision. Our goal is to contribute to the understanding of biological (and in particular, human) vision and at the same time explore its theoretical foundations and practical applications to machine vision.</p>
-                <p>We are always looking for excellent graduate students to join the lab. If any of the vision sciences catches your imagination and research is your passion, please do contact us to tell us about yourself and learn more about the lab and its research.</p>
-            </div>
-            <div class="about-image">
                 <img src="./assets/about/about-pic.jpg" alt="About ICVL">
-            </div>
+                <p>The Interdisciplinary Computational Vision Lab was founded in 2006 as one of the core labs in the Computer Science department at Ben-Gurion University. Loyal to its name, the lab is an interdisciplinary facility where research focuses on computational vision but at the same time spans various aspects of vision sciences, including theoretical computer vision, human perception and visual psychophysics, visual neuroscience, and applied machine vision. Our goal is to contribute to the understanding of biological (and in particular, human) vision and at the same time explore its theoretical foundations and practical applications to machine vision.
+                We are always looking for excellent graduate students to join the lab. If any of the vision sciences catches your imagination and research is your passion, please do contact us to tell us about yourself and learn more about the lab and its research.</p>
         </div>
 
         <h2>Mission</h2>
