code for two researches as POC

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/components.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="css/seminar.css">
+    <link rel="stylesheet" href="css/research.css">
 </head>
 <body>
     <header>
