--- a/pages/research.html
+++ b/pages/research.html
@@ -3,19 +3,19 @@
 <h2>Active Research</h2>
 <div class="research-grid">
     <div class="research-item">
-        <a href="https://icvl.cs.bgu.ac.il/multi-phase-rl-for-jigsaw-puzzle-solving/">
+        <a href="#" onclick="loadContent('pages/researches/Multi-Phase-Relaxation.html')">
             <img src="./assets/research/gifs/multi-phase_rl_for_puzzles_featured_image-1.gif" alt="Multi-Phase Relaxation Labeling for Square Jigsaw Puzzle Solving">
             <p>Multi-Phase Relaxation Labeling for Square Jigsaw Puzzle Solving</p>
         </a>
     </div>
     <div class="research-item">
-        <a href="https://icvl.cs.bgu.ac.il/polygonal-puzzle-solving/">
+        <a href="#" onclick="loadContent('pages/researches/Computational-Polygonal-Puzzle-Solving.html')">
             <img src="./assets/research/gifs/apictorial_polygonal_reconstruction3.gif" alt="Computational Polygonal Puzzle Solving">
             <p>Computational Polygonal Puzzle Solving</p>
         </a>
     </div>
     <div class="research-item">
-        <a href="https://icvl.cs.bgu.ac.il/automatic-jigsaw-puzzle-solving/">
+        <a href="#" onclick="loadContent('pages/researches/')">
             <img src="./assets/research/gifs/projects-index-jigsaw-anim.gif" alt="Square Jigsaw Puzzle Solving">
             <p>Square Jigsaw Puzzle Solving</p>
         </a>
