adding Square Jigsaw Puzzle Solving

--- a/pages/research.html
+++ b/pages/research.html
@@ -15,7 +15,7 @@
         </a>
     </div>
     <div class="research-item">
-        <a href="#" onclick="loadContent('pages/researches/')">
+        <a href="#" onclick="loadContent('pages/researches/Square-Jigsaw-Puzzle-Solving.html')">
             <img src="./assets/research/gifs/projects-index-jigsaw-anim.gif" alt="Square Jigsaw Puzzle Solving">
             <p>Square Jigsaw Puzzle Solving</p>
         </a>
