adding two more researches + css adjustments

--- a/pages/research.html
+++ b/pages/research.html
@@ -21,14 +21,14 @@
         </a>
     </div>
     <div class="research-item">
-        <a href="https://icvl.cs.bgu.ac.il/hyperspectral-imaging/">
+        <a href="#" onclick="loadContent('pages/researches/hyperspectral-imaging.html')">
             <img src="./assets/research/gifs/hs-animation1.gif" alt="Hyperspectral Imaging from low cost sensors">
             <p>Hyperspectral Imaging from low cost sensors</p>
         </a>
     </div>
     <div class="research-item">
-        <a href="https://icvl.cs.bgu.ac.il/archerfish-vision/">
-            <img src="./assets/research/gifs/projects-index-CVwVC-anim.gif" alt="Archerfish Vision">
+                <a href="#" onclick="loadContent('pages/researches/Archerfish-Vision.html')">
+                    <img src="./assets/research/gifs/projects-index-CVwVC-anim.gif" alt="Archerfish Vision">
             <p>Archerfish Vision</p>
         </a>
     </div>
