adding last two recent researches

--- a/pages/research.html
+++ b/pages/research.html
@@ -33,13 +33,13 @@
         </a>
     </div>
     <div class="research-item">
-        <a href="https://icvl.cs.bgu.ac.il/visual-completion/">
+            <a href="#" onclick="loadContent('pages/researches/Curve-completion-in-the-tangent-bundle.html')">
             <img src="./assets/research/gifs/projects-index-CCinTB-anim.gif" alt="Curve completion in the tangent bundle">
             <p>Curve completion in the tangent bundle</p>
         </a>
     </div>
     <div class="research-item">
-        <a href="https://icvl.cs.bgu.ac.il/agrovision/">
+            <a href="#" onclick="loadContent('pages/researches/Agrovision.html')">
             <img src="./assets/research/gifs/20150909_135657_online-video-cutter-1.gif" alt="Agrovision">
             <p>Agrovision</p>
         </a>
