--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="css/seminar.css">
     <link rel="stylesheet" href="css/research.css">
+    <link rel="stylesheet" href="css/resources.css">
 </head>
 <body>
     <header>
