add pages grad positions and senior projects

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 <li><a href="#" onclick="loadContent('pages/seminar.html')">Seminar</a></li>
                 <li><a href="#" onclick="loadContent('pages/gallery.html')">Gallery</a></li>
                 <li><a href="#" onclick="loadContent('pages/resources.html')">Resources</a></li>
-                <li><a href="#" onclick="loadContent('pages/gradpositions.html')">Grad Positions</a></li>
-                <li><a href="#" onclick="loadContent('pages/seniorprojects.html')">Senior Projects</a></li>
+                <li><a href="#" onclick="loadContent('pages/grad-positions.html')">Grad Positions</a></li>
+                <li><a href="#" onclick="loadContent('pages/senior-projects.html')">Senior Projects</a></li>
             </ul>
         </nav>
     </header>
